implemented header (HTML/CSS)

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,23 +16,25 @@
 <body>
   <div class="container">
     <header>
-      <nav>
-          <a href="#">Services</a>
-          <a href="#">Product</a>
-          <a href="#">Vision</a>
-          <a href="#">Features</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
+      <nav class="header-nav">
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
 
-          <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
       </nav>
-      <section>
-        <h2>Innovation</h2>
-        <h2>On</h2>
-        <h2>Demand</h2>
-
-        <a href="#">Get Started</a>
-
+      <section class="header-box">
+        <section>
+          <h2>Innovation</h2>
+          <h2>On</h2>
+          <h2>Demand</h2>
+          <br>
+          <a href="#">Get Started</a>
+        </section>
+        
         <img src="img/header-img.png" alt="Image of a code snippet.">
       </section>
     </header>
