--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -39,7 +39,7 @@
       </section>
     </header>
     <main>
-      <section>
+      <section class="main-content">
         <section>
           <h3>Features</h3>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -50,7 +50,7 @@
         </section>
       </section>
       <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-      <section>
+      <section class="main-content">
         <section>
           <h3>Services</h3>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -69,9 +69,9 @@
       <section>
         <h4>Contact</h4>
         <address>
-          123 Way 456 Street
-          Somewhere, USA
-          1 (888) 888-8888
+          123 Way 456 Street <br>
+          Somewhere, USA <br> <br>
+          1 (888) 888-8888 <br> <br>
           sales@greatidea.io
         </address>
       </section>
